Add logging and working file saving

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
-file management process (backend?)
-cmd-o to open files
-cmd-s to save fils
+x file management process (backend?)
+x cmd-o to open files
+x cmd-s to save fils
 cmd-[ and cmd-] for navigation along headers
-file accordion in sidebar
-navigation menu
+x file accordion in sidebar
+navigation menu bar
